hphp/test/slow/php7_backported/scalar-types/strict_call_weak.php.expectf

Catchable fatal error: Argument 1 passed to function_declared_in_weak_mode() must be an instance of int, double given in %s/strict_call_weak.php on line 10
